*更新：readme 和 package 信息

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiny-pinia",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "模仿 pinia 的简单实现",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/chaimHL/tiny-pinia"
   },
   "keywords": [
     "简易版 pinia"
@@ -18,7 +18,7 @@
   "author": "chaimHL",
   "license": "ISC",
   "peerDependencies": {
-    "typescript": "^5.8.2",
+    "typescript": ">=4.4.4",
     "vue": "^3.5.13"
   }
 }
